Implement order fetching with snapshot listener
Added a query to fetch orders and set up a snapshot listener.

--- a/admin.html
+++ b/admin.html
@@ -33,7 +33,13 @@
   orderBy("createdAt", "asc")
 );
 
+const q = query(
+  collection(db, "orders"),
+  orderBy("createdAt", "asc")
+);
+
 onSnapshot(q, (snapshot) => {
+
 
     ordersDiv.innerHTML = "";
     snapshot.forEach((docSnap) => {
