--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 </head>
 <body>
 
-  <h1>☕ 카페 주문</h1>
-  <div style="margin-bottom:15px;">
+<h1>☕ 카페 주문</h1>
+
+<div style="margin-bottom:15px;">
   <label>테이블 번호</label><br>
   <input type="number" id="tableNumber" placeholder="예: 3" style="width:100%; padding:8px;">
 </div>
 
-
-  <div class="menu">
+<div class="menu">
   <p>비타500 + 파워에이드</p>
   <button onclick="order('비타500 + 파워에이드')">주문하기</button>
 </div>
@@ -45,12 +45,14 @@
   <button onclick="order('메론소다')">주문하기</button>
 </div>
 
-
-
-</body>
- <script type="module">
+<script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+  import {
+    getFirestore,
+    collection,
+    addDoc,
+    serverTimestamp
+  } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyDyrL_U04KFTaVeARyI4UoWNVrZT4TtzI",
@@ -58,33 +60,31 @@
     projectId: "cafe-order-3317d",
     storageBucket: "cafe-order-3317d.firebasestorage.app",
     messagingSenderId: "102833777324",
-    appId: "1:102833777324:web:6c187332c43ffebb8c4d09",
-    measurementId: "G-FD3RRFN1E4"
+    appId: "1:102833777324:web:6c187332c43ffebb8c4d09"
   };
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
 
   async function order(menu) {
-  const table = document.getElementById("tableNumber").value;
+    const table = document.getElementById("tableNumber").value;
 
-  if (!table) {
-    alert("테이블 번호를 입력해주세요");
-    return;
+    if (!table) {
+      alert("테이블 번호를 입력해주세요");
+      return;
+    }
+
+    await addDoc(collection(db, "orders"), {
+      table: table,
+      menu: menu,
+      createdAt: serverTimestamp()
+    });
+
+    alert(`${table}번 테이블 주문 완료!`);
   }
-
-  await addDoc(collection(db, "orders"), {
-    table: table,
-    menu: menu,
-    time: new Date().toLocaleTimeString(),
-    createdAt: new Date()
-  });
-
-  alert(`${table}번 테이블 주문 완료!`);
-}
-
 
   window.order = order;
 </script>
 
+</body>
 </html>
